--- a/style.css
+++ b/style.css
@@ -7,4 +7,15 @@
     --win-color: #28a745;
     --modal-duration: 1s;
   }
-  
+  *{
+      box-sizing: border-box;
+      padding: 0;
+      margin: 0;
+  }
+   
+  body{
+      font-family: 'Roboto',sans-serif;
+      line-height: 1.6;
+      background: #fff;
+      color:#333;
+  }
